passcode refactor
